[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/ground_tile_controls.gd" type="Script" id=1]
[ext_resource path="res://Sprites/tile_ground01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/slime_trail01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/red_slime_trail01.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]

resource_name = "destroyAnim"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 60.0, 90.0, 120.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 0.6, 0.6 ), Vector2( 0.4, 0.4 ), Vector2( 0.2, 0.2 ) ]
}

[node name="GroundTile" type="Node2D"]

position = Vector2( 0.214645, -0.214638 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/destroyAnim = SubResource( 2 )
blend_times = [  ]

[node name="PlayerSlime" type="Sprite" parent="." index="2"]

visible = false
modulate = Color( 1, 1, 1, 0.517647 )
z_index = 1
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="RedSlime" type="Sprite" parent="." index="3"]

visible = false
modulate = Color( 1, 1, 1, 0.517647 )
z_index = 1
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility" ]

[node name="MeltTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="SlimeLineTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.05
one_shot = true
autostart = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="MeltTimer" to="." method="_on_MeltTimer_timeout"]

[connection signal="timeout" from="SlimeLineTimer" to="." method="_on_SlimeLineTimer_timeout"]


